gitops/components/gitea/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-git
  labels:
    app.kubernetes.io/part-of: banking-demo
    cluster: acm
